syntax = "proto3";
package integration;

import "state.proto";

// Integrations are pieces of data that passed, or integrated, into a build container, such as:
//    * Environment Variables
//    * Secrets such as passwords or encryption keys
//    * notification callbacks
//    * API keys for registries like docker, nexus, helm, etc

enum SECRET_TYPE {
    DOCKER_REGISTRY = 0;
    NPM_REPO = 1;
    PYPI_REGISTRY = 2;
    MAVEN_REPO = 3;
    SSH_PEM = 4;
    HELP_REPO = 5;
    KUBERNETES = 6;
    APPLE_DEVELOPER = 7;
    ENV_VAR = 8;
    FILE = 9;
}

enum NOTIFY_TYPE {
    SLACK = 0;
    WEBHOOK = 1;
}

message secret_integration_request {
    int32 org_id = 1;
    SECRET_TYPE secret_type = 2;
    string secret = 3;
    state.ACTIVE_STATE active_state = 4;
}

message secret_integration_response {
    int32 id = 1;
    int32 org_id = 2;
    SECRET_TYPE secret_type = 3;
    state.ACTIVE_STATE active_state = 4;
}

message notify_secret {
    NOTIFY_TYPE notify_type = 1;
    string name = 2;
    string secret = 3;
}

message notify_integration_request {
    int32 org_id = 1;
    notify_secret account = 2; 
}

message notify_integration_response {
    int32 id = 1;
    int32 org_id = 2;
    NOTIFY_TYPE notify_type = 3;
    state.ACTIVE_STATE active_state = 4;
}
